syntax = "proto3";

package api.protobuf.product.v1;

option go_package = "../v1";

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string unit = 5;
  int64 stock = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message CreateProductRequest {
  Product product = 1;
}

message CreateProductResponse {
  Product product = 1;
}

message UpdateProductRequest {
  Product product = 1;
}

message UpdateProductResponse {
  bool success = 1;
}

message GetProductRequest {
  int64 id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  uint64 id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message ListProductsRequest {
  int32 offset = 1;
  int32 limit = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
  uint64 count = 2;
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
}
